--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <p><a href="page2.html" >head out!</a></p>
     </div>
     
-    <img src="images/hotelpage1.jpg" width="760" height="445" >
+    <img src="images/18582976048_09f860a4a1_h.jpg" width="760" height="445" >
   </body> 
 </html>
