--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>comic stip </title>
   </head>
   <body>
-    <h1>get to the beach !!!</h1>
+    <h1>three brothers visit paris </h1>
 
     <div>
       <p> you have to find your way to the beach</p>
